force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Adults_Provided_Vocational__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Adults_Provided_Vocational__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Adults Provided Vocational</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>