force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_ben_incomes_at_or_below__c.field-meta.xml
<CustomField>
    <fullName>G_Program_ben_incomes_at_or_below__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Ben Incomes at or Below</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>