force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Government_Contracts_Grants__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Government_Contracts_Grants__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Government Contracts/Grants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>