force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Homeownership_Education_Ses__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Homeownership_Education_Ses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Homeownership Education Sessions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>