force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Implementation_History__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Implementation_History__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Implementation History</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>