force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Individual_Contributions_Grant__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Individual_Contributions_Grant__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Individual Contributions/Grants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>