force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Investment_Interest_Tax_Rev__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Investment_Interest_Tax_Rev__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Investment Interest/Tax Rev</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>