force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Jobs_Created_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Jobs_Created_Part_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Jobs Created Part Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>