force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_New_Businesses_Served__c.field-meta.xml
<CustomField>
    <fullName>G_Program_New_Businesses_Served__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program New Businesses Served</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>