force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Program_Workshops_and_Training_events__c.field-meta.xml
<CustomField>
    <fullName>G_Program_Workshops_and_Training_events__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Program Workshops and Training events</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>