force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Provide_Income_Thresholds_and_Relate__c.field-meta.xml
<CustomField>
    <fullName>G_Provide_Income_Thresholds_and_Relate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provide Income Thresholds and Relate</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>