force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Reason_Did_Not_Submit_Documents__c.field-meta.xml
<CustomField>
    <fullName>G_Reason_Did_Not_Submit_Documents__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason Did Not Submit Documents</label>
    <type>TextArea</type>
</CustomField>