force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Schools_Free_and_Reduced_Lunch__c.field-meta.xml
<CustomField>
    <fullName>G_Schools_Free_and_Reduced_Lunch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schools Free and Reduced Lunch</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>