force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Small_Businesses_or_Small_Farms__c.field-meta.xml
<CustomField>
    <fullName>G_Small_Businesses_or_Small_Farms__c</fullName>
    <label>Small Businesses or Small Farms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>