force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Stable_Housing__c.field-meta.xml
<CustomField>
    <fullName>G_Stable_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stable Housing</label>
    <type>Checkbox</type>
</CustomField>