force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Strategy_Address_Community_Need__c.field-meta.xml
<CustomField>
    <fullName>G_Strategy_Address_Community_Need__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strategy Address Community Need</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>