force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Strong_Local_Economies__c.field-meta.xml
<CustomField>
    <fullName>G_Strong_Local_Economies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strong Local Economies</label>
    <type>Checkbox</type>
</CustomField>