force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Track_Income_Information__c.field-meta.xml
<CustomField>
    <fullName>G_Track_Income_Information__c</fullName>
    <label>Track Income Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>