force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Vol_Opportunities_for_Bank_Employees__c.field-meta.xml
<CustomField>
    <fullName>G_Vol_Opportunities_for_Bank_Employees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vol Opportunities for Bank Employees</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>