force-app/main/default/objects/FIC_Survey_Application__c/fields/G_Years_Program_Operated__c.field-meta.xml
<CustomField>
    <fullName>G_Years_Program_Operated__c</fullName>
    <label>Years Program Operated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>