force-app/main/default/objects/FIC_Survey_Application__c/fields/Grant_Contact_Email_Previous__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact_Email_Previous__c</fullName>
    <description>Check field to see if user is changing this field on the Grant Application.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grant_Contact_Email_Previous</label>
    <type>Email</type>
</CustomField>