force-app/main/default/objects/FIC_Survey_Application__c/fields/Grant_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grant Contact Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>