force-app/main/default/objects/FIC_Survey_Application__c/fields/Grant_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grant Contact Phone</label>
    <type>Phone</type>
</CustomField>