force-app/main/default/objects/FIC_Survey_Application__c/fields/Individuals_Served_Low_Income__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Served_Low_Income__c</fullName>
    <label>Individuals Served Low Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>