force-app/main/default/objects/FIC_Survey_Application__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omaha</fullName>
                <label>NE - Omaha Metro Area</label>
            </value>
            <value>
                <fullName>Lincoln</fullName>
                <label>NE - Lincoln, Beatrice</label>
            </value>
            <value>
                <fullName>Fremont</fullName>
                <label>NE - Fremont</label>
            </value>
            <value>
                <fullName>Columbus</fullName>
                <label>NE - Columbus, Norfolk, David City</label>
            </value>
            <value>
                <fullName>Kearney</fullName>
                <label>NE - Kearney, Grand Island</label>
            </value>
            <value>
                <fullName>North Platte</fullName>
                <label>NE - North Platte, Alliance, Chadron, Scottsbluff</label>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>South Dakota</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>