force-app/main/default/objects/FIC_Survey_Application__c/fields/Market_Previous__c.field-meta.xml
<CustomField>
    <fullName>Market_Previous__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Market_Previous</label>
    <length>60</length>
    <type>Text</type>
</CustomField>