force-app/main/default/objects/FIC_Survey_Application__c/fields/Media_Opportunities_del__c.field-meta.xml
<CustomField>
    <fullName>Media_Opportunities_del__c</fullName>
    <label>Media Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>None/NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>