force-app/main/default/objects/FIC_Survey_Application__c/fields/Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mission_Statement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mission Statement</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>