force-app/main/default/objects/FIC_Survey_Application__c/fields/Name_of_Organization__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Organization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Organization</label>
    <length>120</length>
    <type>Text</type>
</CustomField>