force-app/main/default/objects/FIC_Survey_Application__c/fields/Non_Profit_Organization__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Non Profit Organization</label>
    <referenceTo>Volunteer_Organization__c</referenceTo>
    <relationshipLabel>FIC Survey Applications</relationshipLabel>
    <relationshipName>FIC_Survey_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>