force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_City__c.field-meta.xml
<CustomField>
    <fullName>Organization_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>