force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_Community_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Organization_Community_Focus_Area__c</fullName>
    <label>Organization Community Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access to Culture</fullName>
            </value>
            <value>
                <fullName>Community Cohesion</fullName>
            </value>
            <value>
                <fullName>Educated Workforce</fullName>
            </value>
            <value>
                <fullName>Good Health</fullName>
            </value>
            <value>
                <fullName>Stable Housing</fullName>
            </value>
            <value>
                <fullName>Strong Local Economies</fullName>
            </value>
            <value>
                <fullName>Sustained Environment</fullName>
            </value>
            <value>
                <fullName>Vibrant Neighborhoods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>