force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Organization_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Contact Email</label>
    <type>Email</type>
</CustomField>