force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Organization_Contact_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Contact Phone Number</label>
    <type>Phone</type>
</CustomField>