force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_Have_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Organization_Have_Relationship__c</fullName>
    <label>Organization Have Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>