force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Organization_Street_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>