force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_Website__c.field-meta.xml
<CustomField>
    <fullName>Organization_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Website</label>
    <type>Url</type>
</CustomField>