force-app/main/default/objects/FIC_Survey_Application__c/fields/Organization_Zip__c.field-meta.xml
<CustomField>
    <fullName>Organization_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>