force-app/main/default/objects/FIC_Survey_Application__c/fields/Page_Left_off_at__c.field-meta.xml
<CustomField>
    <fullName>Page_Left_off_at__c</fullName>
    <description>For applicants coming back after saving, this is the page the applicant left off at when they saved.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Page Left off at</label>
    <length>50</length>
    <type>Text</type>
</CustomField>