force-app/main/default/objects/FIC_Survey_Application__c/fields/Person_Completing_This_Form__c.field-meta.xml
<CustomField>
    <fullName>Person_Completing_This_Form__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person Completing This Form</label>
    <length>120</length>
    <type>Text</type>
</CustomField>