force-app/main/default/objects/FIC_Survey_Application__c/fields/Person_Completing_This_Form_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Completing_This_Form_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person Completing This Form Email</label>
    <type>Email</type>
</CustomField>