force-app/main/default/objects/FIC_Survey_Application__c/fields/Please_Describe_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Please_Describe_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Please Describe Relationship</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>