force-app/main/default/objects/FIC_Survey_Application__c/fields/Please_Provide_Board_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Please_Provide_Board_of_Directors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Please Provide Board of Directors</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>