force-app/main/default/objects/FIC_Survey_Application__c/fields/Program_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program/Event Date</label>
    <type>Date</type>
</CustomField>