force-app/main/default/objects/FIC_Survey_Application__c/fields/Program_Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program/Event Description</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>