force-app/main/default/objects/FIC_Survey_Application__c/fields/Program_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program/Event Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>