force-app/main/default/objects/FIC_Survey_Application__c/fields/Provide_Name_and_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Provide_Name_and_Service_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provide Name and Service Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>