force-app/main/default/objects/FIC_Survey_Application__c/fields/Q_Collect_and_Verify_Beneficiary_Income__c.field-meta.xml
<CustomField>
    <fullName>Q_Collect_and_Verify_Beneficiary_Income__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collect and Verify Beneficiary Income</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>