force-app/main/default/objects/FIC_Survey_Application__c/fields/Request_for_Capital_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Capital_Campaign__c</fullName>
    <label>Request for Capital Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>