force-app/main/default/objects/FIC_Survey_Application__c/fields/Returned_to_Signin__c.field-meta.xml
<CustomField>
    <fullName>Returned_to_Signin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True False value to indicate if the user hit the back button to return to the sign-in page.</description>
    <label>Returned to Signin</label>
    <type>Checkbox</type>
</CustomField>