force-app/main/default/objects/FIC_Survey_Application__c/fields/Specific_Funding_Sources__c.field-meta.xml
<CustomField>
    <fullName>Specific_Funding_Sources__c</fullName>
    <description>For the CRA Grant Application</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Specific Funding Sources</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>