force-app/main/default/objects/FIC_Survey_Application__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Donation / Sponsorship Submitted Indicator</description>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>