force-app/main/default/objects/FIC_Survey_Application__c/fields/Tax_ID_Previous__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Previous__c</fullName>
    <description>Used for Grant application page back processing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax ID Previous</label>
    <length>10</length>
    <type>Text</type>
</CustomField>