force-app/main/default/objects/FIC_Survey_Application__c/fields/Update_Code__c.field-meta.xml
<CustomField>
    <fullName>Update_Code__c</fullName>
    <description>Code passed from community investment trigger to allow updates of fields when the Processed flag is set to true (record already been processed and copied to Community Investment).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Update Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>