force-app/main/default/objects/FIC_Survey_Application__c/recordTypes/Donation_Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Donation_Sponsorship</fullName>
    <active>true</active>
    <label>Donation/Sponsorship</label>
</RecordType>